// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pre /> should render code block when no languages are passed 1`] = `
<div
  class="my-32"
>
  <pre
    class="bg-cool-black text-white p-0 rounded-lg relative"
  >
    useVars = false;
  </pre>
</div>
`;

exports[`<Pre /> should successfully render Code elements with language 1`] = `
<div
  class="my-32"
>
  <pre
    class="bg-cool-black text-white p-0 rounded-lg relative"
  >
    <div
      class="border-b border-charcoal-grey w-full"
    >
      <menu
        class="horizontalNav"
        data-testid="menu"
      >
        <button
          class="button isActive"
        >
          JavaScript
        </button>
        <button
          class="button"
        >
          C# .NET
        </button>
        <div
          class="dropdownContainer"
        >
          <div
            class=" css-fyq6mk-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-language-navigation-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="ably-select__control css-1k9j1wp-control"
            >
              <div
                class="ably-select__value-container ably-select__value-container--has-value css-1fdsijx-ValueContainer"
              >
                <div
                  class="ably-select__single-value css-kcyb9y-singleValue"
                >
                  JavaScript v1.2
                </div>
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-readonly="true"
                  class="css-mohuvp-dummyInput-DummyInput"
                  id="react-select-language-navigation-input"
                  inputmode="none"
                  role="combobox"
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="ably-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="ably-select__indicator-separator css-1xjgjl1-IndicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="ably-select__indicator ably-select__dropdown-indicator css-1gvtn5f-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
    useVars = false;
  </pre>
</div>
`;

exports[`<Pre /> should successfully render code elements with  only Realtime languages 1`] = `
<div
  class="my-32"
>
  <pre
    class="bg-cool-black text-white p-0 rounded-lg relative"
  >
    <div
      class="bg-dark-grey border-charcoal-grey text-white border-b-4 rounded-t-lg flex justify-end"
    >
      <menu
        class="flex md:overflow-x-auto pl-0 justify-end md:justify-start h-48 mr-16 my-0"
        data-testid="menuSDKInterface"
      >
        <button
          class="font-medium font-sans focus:outline-none px-24 text-mid-grey bg-charcoal-grey"
        >
          Realtime
        </button>
        <div
          aria-label="Ably SDKs may contain a realtime and a REST interface, each of which satisfy different use cases."
          class="flex flex-row w-full justify-start mt-2"
          role="button"
          tabindex="0"
        >
          <svg
            class="mid-grey mt-12 ml-16"
            style="width: 1.25rem; height: 1.25rem;"
          >
            <use
              xlink:href="#sprite-icon-gui-info"
            />
          </svg>
        </div>
      </menu>
    </div>
    <div
      class="border-b border-charcoal-grey w-full"
    >
      <menu
        class="horizontalNav"
        data-testid="menu"
      >
        <button
          class="button isActive"
        >
          JavaScript
        </button>
        <button
          class="button"
        >
          C# .NET
        </button>
        <div
          class="dropdownContainer"
        >
          <div
            class=" css-fyq6mk-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-language-navigation-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="ably-select__control css-1k9j1wp-control"
            >
              <div
                class="ably-select__value-container ably-select__value-container--has-value css-1fdsijx-ValueContainer"
              >
                <div
                  class="ably-select__single-value css-kcyb9y-singleValue"
                >
                  JavaScript v1.2
                </div>
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-readonly="true"
                  class="css-mohuvp-dummyInput-DummyInput"
                  id="react-select-language-navigation-input"
                  inputmode="none"
                  role="combobox"
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="ably-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="ably-select__indicator-separator css-1xjgjl1-IndicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="ably-select__indicator ably-select__dropdown-indicator css-1gvtn5f-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
    useVars = false;
  </pre>
</div>
`;

exports[`<Pre /> should successfully render code elements with  only Rest languages 1`] = `
<div
  class="my-32"
>
  <pre
    class="bg-cool-black text-white p-0 rounded-lg relative"
  >
    <div
      class="bg-dark-grey border-charcoal-grey text-white border-b-4 rounded-t-lg flex justify-end"
    >
      <menu
        class="flex md:overflow-x-auto pl-0 justify-end md:justify-start h-48 mr-16 my-0"
        data-testid="menuSDKInterface"
      >
        <button
          class="font-medium font-sans focus:outline-none px-24 text-mid-grey "
        >
          Realtime
        </button>
        <div
          aria-label="Ably SDKs may contain a realtime and a REST interface, each of which satisfy different use cases."
          class="flex flex-row w-full justify-start mt-2"
          role="button"
          tabindex="0"
        >
          <svg
            class="mid-grey mt-12 ml-16"
            style="width: 1.25rem; height: 1.25rem;"
          >
            <use
              xlink:href="#sprite-icon-gui-info"
            />
          </svg>
        </div>
      </menu>
    </div>
    <div
      class="border-b border-charcoal-grey w-full"
    >
      <menu
        class="horizontalNav"
        data-testid="menu"
      >
        <button
          class="button isActive"
        >
          JavaScript
        </button>
        <button
          class="button"
        >
          C# .NET
        </button>
        <div
          class="dropdownContainer"
        >
          <div
            class=" css-fyq6mk-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-language-navigation-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="ably-select__control css-1k9j1wp-control"
            >
              <div
                class="ably-select__value-container ably-select__value-container--has-value css-1fdsijx-ValueContainer"
              >
                <div
                  class="ably-select__single-value css-kcyb9y-singleValue"
                >
                  JavaScript v1.2
                </div>
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-readonly="true"
                  class="css-mohuvp-dummyInput-DummyInput"
                  id="react-select-language-navigation-input"
                  inputmode="none"
                  role="combobox"
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="ably-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="ably-select__indicator-separator css-1xjgjl1-IndicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="ably-select__indicator ably-select__dropdown-indicator css-1gvtn5f-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
    useVars = false;
  </pre>
</div>
`;

exports[`<Pre /> should successfully render code elements with both Rest and Realtime languages 1`] = `
<div
  class="my-32"
>
  <pre
    class="bg-cool-black text-white p-0 rounded-lg relative"
  >
    <div
      class="bg-dark-grey border-charcoal-grey text-white border-b-4 rounded-t-lg flex justify-end"
    >
      <menu
        class="flex md:overflow-x-auto pl-0 justify-end md:justify-start h-48 mr-16 my-0"
        data-testid="menuSDKInterface"
      >
        <button
          class="font-medium font-sans focus:outline-none px-24 text-mid-grey "
        >
          Realtime
        </button>
        <button
          class="font-medium font-sans focus:outline-none px-24 text-mid-grey bg-charcoal-grey"
        >
          REST
        </button>
        <div
          aria-label="Ably SDKs may contain a realtime and a REST interface, each of which satisfy different use cases."
          class="flex flex-row w-full justify-start mt-2"
          role="button"
          tabindex="0"
        >
          <svg
            class="mid-grey mt-12 ml-16"
            style="width: 1.25rem; height: 1.25rem;"
          >
            <use
              xlink:href="#sprite-icon-gui-info"
            />
          </svg>
        </div>
      </menu>
    </div>
    <div
      class="border-b border-charcoal-grey w-full"
    >
      <menu
        class="horizontalNav"
        data-testid="menu"
      >
        <button
          class="button isActive"
        >
          JavaScript
        </button>
        <button
          class="button"
        >
          C# .NET
        </button>
        <div
          class="dropdownContainer"
        >
          <div
            class=" css-fyq6mk-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-language-navigation-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="ably-select__control css-1k9j1wp-control"
            >
              <div
                class="ably-select__value-container ably-select__value-container--has-value css-1fdsijx-ValueContainer"
              >
                <div
                  class="ably-select__single-value css-kcyb9y-singleValue"
                >
                  JavaScript v1.2
                </div>
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-readonly="true"
                  class="css-mohuvp-dummyInput-DummyInput"
                  id="react-select-language-navigation-input"
                  inputmode="none"
                  role="combobox"
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="ably-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="ably-select__indicator-separator css-1xjgjl1-IndicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="ably-select__indicator ably-select__dropdown-indicator css-1gvtn5f-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
    useVars = false;
  </pre>
</div>
`;
